samples/_failures_safe/1761317726_9ed154_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1953e3da.c: In function ‘main’:
./samples/SAFE/__tmp_1953e3da.c:177:38: error: missing terminating ' character
  177 |     if (len > 0 && input[len - 1] == '\
      |                                      ^~
./samples/SAFE/__tmp_1953e3da.c:177:5: error: expected expression at end of input
  177 |     if (len > 0 && input[len - 1] == '\
      |     ^~
./samples/SAFE/__tmp_1953e3da.c:177:5: error: expected declaration or statement at end of input
